--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -4,14 +4,12 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-05-13T13:44:39.532059Z",
-     "start_time": "2024-05-13T13:44:35.378230Z"
-    }
+    "collapsed": true
    },
    "source": [
     "!pip install deep-translator spacy unidecode nltk\n",
+    "!python -m spacy download en_core_web_sm\n",
+    "\n",
     "import re\n",
     "\n",
     "import nltk\n",
@@ -22,58 +20,8 @@
     "\n",
     "import services.influencers_sevice as influencers_service"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: deep-translator in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (1.11.4)\n",
-      "Requirement already satisfied: spacy in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (3.7.4)\n",
-      "Requirement already satisfied: unidecode in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (1.3.8)\n",
-      "Requirement already satisfied: nltk in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (3.8.1)\n",
-      "Requirement already satisfied: beautifulsoup4<5.0.0,>=4.9.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from deep-translator) (4.13.0b2)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.23.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from deep-translator) (2.31.0)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.0.12)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.0.5)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.0.10)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.0.8)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.0.9)\n",
-      "Requirement already satisfied: thinc<8.3.0,>=8.2.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (8.2.3)\n",
-      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.1.2)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.4.8)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.0.10)\n",
-      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (0.3.4)\n",
-      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (0.9.4)\n",
-      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (6.4.0)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (4.66.4)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.7.1)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.1.4)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (69.5.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (24.0)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.4.0)\n",
-      "Requirement already satisfied: numpy>=1.19.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.26.4)\n",
-      "Requirement already satisfied: click in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (1.3.2)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (2024.5.10)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from beautifulsoup4<5.0.0,>=4.9.1->deep-translator) (2.5)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from beautifulsoup4<5.0.0,>=4.9.1->deep-translator) (4.11.0)\n",
-      "Requirement already satisfied: language-data>=1.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from langcodes<4.0.0,>=3.2.0->spacy) (1.2.0)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.18.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.18.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (2024.2.2)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from thinc<8.3.0,>=8.2.2->spacy) (0.7.11)\n",
-      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from thinc<8.3.0,>=8.2.2->spacy) (0.1.5a0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy) (0.4.6)\n",
-      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from weasel<0.4.0,>=0.1.0->spacy) (0.16.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from jinja2->spacy) (2.1.5)\n",
-      "Requirement already satisfied: marisa-trie>=0.7.7 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy) (1.1.0)\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -90,7 +38,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T14:00:33.550438Z",
+     "start_time": "2024-05-13T14:00:33.545430Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def clean_and_process_posts(posts):\n",
@@ -103,7 +56,7 @@
     "            content = re.sub(r'http\\S+', '', content)\n",
     "\n",
     "            # Removing Special Characters\n",
-    "            content = re.sub('\\W+', ' ', content)\n",
+    "            content = re.sub(r'\\W+', ' ', content)\n",
     "\n",
     "            # Removing Emojis\n",
     "            content = unidecode(content)\n",
@@ -132,7 +85,7 @@
    ],
    "id": "5486f9447de42710",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
    "metadata": {},
