--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T15:23:27.717066Z",
+     "start_time": "2024-05-13T15:23:20.559150Z"
+    }
    },
    "source": [
     "!pip install deep-translator spacy unidecode nltk\n",
@@ -20,11 +24,67 @@
     "\n",
     "import services.influencers_sevice as influencers_service"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: deep-translator in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (1.11.4)\n",
+      "Requirement already satisfied: spacy in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (3.7.4)\n",
+      "Requirement already satisfied: unidecode in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (1.3.8)\n",
+      "Requirement already satisfied: nltk in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (3.8.1)\n",
+      "Requirement already satisfied: beautifulsoup4<5.0.0,>=4.9.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from deep-translator) (4.13.0b2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.23.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from deep-translator) (2.31.0)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.0.8)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.0.9)\n",
+      "Requirement already satisfied: thinc<8.3.0,>=8.2.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (8.2.3)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.1.2)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.4.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (0.3.4)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (0.9.4)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (6.4.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (4.66.4)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (2.7.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.1.4)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (69.5.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (24.0)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (3.4.0)\n",
+      "Requirement already satisfied: numpy>=1.19.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from spacy) (1.26.4)\n",
+      "Requirement already satisfied: click in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: joblib in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (1.4.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from nltk) (2024.5.10)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from beautifulsoup4<5.0.0,>=4.9.1->deep-translator) (2.5)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from beautifulsoup4<5.0.0,>=4.9.1->deep-translator) (4.11.0)\n",
+      "Requirement already satisfied: language-data>=1.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from langcodes<4.0.0,>=3.2.0->spacy) (1.2.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.18.2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.18.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from requests<3.0.0,>=2.23.0->deep-translator) (2024.2.2)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from thinc<8.3.0,>=8.2.2->spacy) (0.7.11)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from thinc<8.3.0,>=8.2.2->spacy) (0.1.5a0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy) (0.4.6)\n",
+      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from weasel<0.4.0,>=0.1.0->spacy) (0.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from jinja2->spacy) (2.1.5)\n",
+      "Requirement already satisfied: marisa-trie>=0.7.7 in c:\\users\\wawao\\onedrive\\bureau\\influencer-marketing\\.venv\\lib\\site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy) (1.1.1)\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "execution_count": 41
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T15:23:28.581727Z",
+     "start_time": "2024-05-13T15:23:27.719240Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Load necessary libraries\n",
@@ -34,14 +94,24 @@
     "translator = GoogleTranslator(source='auto', target='en')"
    ],
    "id": "2a3b0053e34bd72",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\wawao\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-13T14:00:33.550438Z",
-     "start_time": "2024-05-13T14:00:33.545430Z"
+     "end_time": "2024-05-13T15:23:28.594518Z",
+     "start_time": "2024-05-13T15:23:28.583889Z"
     }
    },
    "cell_type": "code",
@@ -50,6 +120,7 @@
     "    \"\"\" This performs URL removal, special character cleaning, emoji removal, translation, stopword removal, and lemmatization.\"\"\"\n",
     "\n",
     "    for post in posts:\n",
+    "        print(post)\n",
     "        content = post.get('content', '')\n",
     "        try:\n",
     "            # Removing URLs\n",
@@ -85,10 +156,15 @@
    ],
    "id": "5486f9447de42710",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 43
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T15:23:28.614356Z",
+     "start_time": "2024-05-13T15:23:28.597209Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Load posts\n",
@@ -99,7 +175,7 @@
    ],
    "id": "dff93f1ac17c7d60",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 44
   }
  ],
  "metadata": {
